--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -1,3 +1,7 @@
+*{
+  font-family:Algerian;
+}
+
 .container {
   padding: 0 2rem;
 }
@@ -10,6 +14,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-decoration: none;
 }
 
 .footer {
@@ -54,6 +59,7 @@
   margin: 4rem 0;
   line-height: 1.5;
   font-size: 1.5rem;
+  text-decoration:none;
 }
 
 .code {
@@ -99,6 +105,7 @@
 
 .card p {
   margin: 0;
+  padding: 0;
   font-size: 1.25rem;
   line-height: 1.5;
 }
